  * debian/rules: Pass include directories to autoreconf to have the correct
    macros in scope for the new build system 
  * debian/patches/ubuntu*: Steal patches from Ubuntu package to improve
    --view mode and add an undo/redo stack. Rebase on new upstream version.
    Thanks to Chris Halse Rogers.
  * debian/patches/ubuntu_fname_quote_percent.patch: Drop, now upstream.

 -- Iain Lane <laney@ubuntu.com>  Mon, 17 May 2010 11:59:58 +0100

f-spot (0.6.1.5-3) unstable; urgency=low

  * debian/control: 
     + Add missing build-dependency on libjpeg-dev, fixes FTBFS
       (Closes: #577894)
     + Increase Standards-Version to 3.8.4, no changes required
  * debian/patches/debian_disable-unit-tests: Disable unit tests as these
    were never meant to be enabled and cause an unnecessary dep on nunit. 
  * debian/source/format: Add with 1.0

 -- Iain Lane <laney@ubuntu.com>  Tue, 27 Apr 2010 13:42:53 +0100

f-spot (0.6.1.5-2) unstable; urgency=low

  * debian/control, debian/patches/debian_link-system-*.patch: Update
    flickrnet and keyring-sharp dependencies to use the new -dev packages.
    Update patches to search for unversioned pcfiles (Closes: #556802)
  * debian/control:
   + Bump mono-devel build-dep to >= 2.4.3 and remove all build-depends on
     packages now provided transitively by mono-devel.
   + Replace library build-depends with -dev counterparts which now contain
     the pcfiles.
  * debian/ltmain-as-needed.sh: Steal updated version from Tomboy  

 -- Iain Lane <laney@ubuntu.com>  Sat, 09 Jan 2010 13:23:01 +0000

f-spot (0.6.1.5-1) unstable; urgency=low

  * New upstream release 0.6.1.5
   - make IconView responsive to mouseclicks on gdk 2.18 (LP: #448162)
   - do not ignore .rw2 files
   - avoid an Array.OORE on empty dbs (Mike Gemuende)
  * debian/rules: Make get-orig-source policy compliant 

 -- Iain Lane <laney@ubuntu.com>  Mon, 09 Nov 2009 18:12:08 +0000

f-spot (0.6.1.4-1) unstable; urgency=low

  * New upstream release 0.6.1.4