@@ -49,6 +49,8 @@ f-spot (0.6.2-1) UNRELEASED; urgency=low
     --view mode and add an undo/redo stack. Rebase on new upstream version.
     Thanks to Chris Halse Rogers.
   * debian/patches/ubuntu_fname_quote_percent.patch: Drop, now upstream.
+  * debian/rules: Incorporate Ubuntu specific changes, and guard by a call to
+    dpkg-vendor.
 
  -- Iain Lane <laney@ubuntu.com>  Mon, 17 May 2010 11:59:58 +0100
 
